<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/playback_pref">
        <CheckBoxPreference android:key="prefPauseOnHeadsetDisconnect" android:title="@string/pref_pauseOnHeadsetDisconnect_title" android:enabled="true" android:defaultValue="true" android:summary="@string/pref_pauseOnHeadsetDisconnect_sum"/>
        <CheckBoxPreference android:key="prefFollowQueue" android:title="@string/pref_followQueue_title" android:enabled="true" android:defaultValue="false" android:summary="@string/pref_followQueue_sum"/>
    </PreferenceCategory><PreferenceCategory android:title="@string/network_pref">
        <CheckBoxPreference android:key="prefDownloadMediaOnWifiOnly" android:title="@string/pref_downloadMediaOnWifiOnly_title" android:enabled="true" android:defaultValue="true" android:summary="@string/pref_downloadMediaOnWifiOnly_sum"/><ListPreference android:title="@string/pref_autoUpdateIntervall_title" android:summary="@string/pref_autoUpdateIntervall_sum" android:key="prefAutoUpdateIntervall" android:entryValues="@array/update_intervall_values" android:entries="@array/update_intervall_options" android:defaultValue="0"/>
        
    </PreferenceCategory><PreferenceCategory android:title="@string/other_pref">
        <Preference android:title="@string/version_pref"/>
        <Preference android:title="@string/about_pref"/>
    </PreferenceCategory>
    
    
    

</PreferenceScreen>