<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/all_feed_refresh" android:title="@string/refresh_label" android:icon="@drawable/navigation_refresh" android:showAsAction="ifRoom|collapseActionView">
    </item><item
        android:id="@+id/add_feed"
        android:title="@string/add_feed_label"
        android:icon="@drawable/content_new"
        android:showAsAction="ifRoom|collapseActionView">
    </item>
    
    
    
    <item android:id="@id/search_item" android:icon="@drawable/action_search" android:title="@string/search_label" android:showAsAction="ifRoom|collapseActionView"></item><item android:id="@+id/show_player" android:title="@string/show_player_label" android:icon="@drawable/av_play" android:showAsAction="collapseActionView"></item><item android:id="@+id/show_playback_history" android:title="@string/playback_history_label" android:showAsAction="collapseActionView"></item><item android:id="@+id/show_downloads" android:title="@string/downloads_label" android:icon="@drawable/av_download" android:showAsAction="collapseActionView">
    </item><item android:id="@+id/show_preferences" android:title="@string/settings_label" android:icon="@drawable/action_settings" android:showAsAction="collapseActionView"></item>
    
    
</menu>
