<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
            android:id="@+id/txtvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_notification_title"
            android:textSize="@dimen/text_size_large"
            android:textColor="?android:attr/textColorPrimary"/>

    <TextView
            android:id="@+id/txtvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_notification_msg"
            android:textColor="?android:attr/textColorSecondary"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxtUsername"
            android:hint="@string/username_label"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:cursorVisible="true"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etxtPassword"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:cursorVisible="true"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="end">

        <Button
                android:id="@+id/butCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="?attr/colorAccent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/cancel_label"/>

        <Button
                android:id="@+id/butConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="?attr/colorAccent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/confirm_label"/>
    </LinearLayout>

</LinearLayout>