<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="de.danoeh.antennapod.activity.MainActivity">

    <ImageView
        android:id="@+id/imgvCover"
        android:contentDescription="@string/cover_label"
        android:layout_width="@dimen/thumbnail_length_onlinefeedview"
        android:layout_height="@dimen/thumbnail_length_onlinefeedview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"/>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/butShowInfo"
        android:contentDescription="@string/show_info_label"
        android:src="?attr/action_about"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="?attr/borderless_button"/>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:id="@+id/butVisitWebsite"
        android:contentDescription="@string/visit_website_label"
        android:src="?attr/location_web_site"
        android:layout_toLeftOf="@id/butShowInfo"
        android:layout_alignParentBottom="true"
        android:background="?attr/borderless_button"/>

    <TextView
        android:id="@+id/txtvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:layout_alignTop="@id/imgvCover"
        android:layout_toRightOf="@id/imgvCover"
        android:layout_alignParentRight="true"
        android:lines="1"
        style="@style/AntennaPod.TextView.Heading"
        android:layout_margin="4dp"/>

    <TextView
        android:id="@+id/txtvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_below="@id/txtvTitle"
        android:layout_toRightOf="@id/imgvCover"
        android:layout_toLeftOf="@id/butShowInfo"
        android:lines="1"
        android:ellipsize="end"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/text_size_small"/>

</RelativeLayout>